dataset1235/2025-2/2868285114/users/2920714538/executions/2135592949_3788368433.log
== SUBMISSION (2025-08-12 23:30:52)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Gandalf")

# Impressao de saidas
print("var")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Gandalfvar
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Gandalfvar
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Gandalfvar
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Gandalfvar
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Gandalfvar
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:33:12)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Gandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Donald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Python
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Ada Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:31:42)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()

# Impressao de saidas
print("var")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
var
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
var
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
var
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
var
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:29:18)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(Gandalf)

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(Gandalf)
                ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(Gandalf)
                ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(Gandalf)
                ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(Gandalf)
                ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(Gandalf)
                ^^^^^^^
NameError: name 'Gandalf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:28:30)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = Gandalf

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = Gandalf
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = Gandalf
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = Gandalf
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = Gandalf
          ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = Gandalf
          ^^^^^^^
NameError: name 'Gandalf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:31:45)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()

# Impressao de saidas
print("var")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
var
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
var
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
var
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
var
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
var
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:28:00)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = 

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
File "XXXX", line 4
    var = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:32:31)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = print(input())

# Impressao de saidas
print("var")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
var
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
var
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
var
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
var
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
var
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:30:42)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Gandalf")

# Impressao de saidas
print("var")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Gandalfvar
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Gandalfvar
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Gandalfvar
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Gandalfvar
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Gandalfvar
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:29:07)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Gandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Donald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Python
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Ada Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:31:02)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Gandalf")

# Impressao de saidas
print("var")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Gandalfvar
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Gandalfvar
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Gandalfvar
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Gandalfvar
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Gandalfvar
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:30:33)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(Gandalf)

# Impressao de saidas
print("var")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(Gandalf)
                ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(Gandalf)
                ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(Gandalf)
                ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(Gandalf)
                ^^^^^^^
NameError: name 'Gandalf' is not defined
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(Gandalf)
                ^^^^^^^
NameError: name 'Gandalf' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:31:41)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()

# Impressao de saidas
print("var")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
var
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
var
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
var
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
var
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
var
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-12 23:33:09)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input()

# Impressao de saidas
print(var)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Gandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Donald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Python
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Ada Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-12 23:30:59)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("Gandalf")

# Impressao de saidas
print("var")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
Gandalfvar
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
Gandalfvar
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
Gandalfvar
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
Gandalfvar
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
Gandalfvar
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
